# simple-service

./: pyproject.toml
app/: api.py
cli/: cli.py
simple_service.egg-info/: SOURCES.txt  requires.txt
